fix a few weird oddities and add video stats

--- a/templates/sbnext-finalium/components/comment.twig
+++ b/templates/sbnext-finalium/components/comment.twig
@@ -7,7 +7,7 @@
 	<div class="col-md-11">
 		{{ userlink(data, 'u_') }} &bull; {{ data.date | relative_time}}
 		<br>
-		<div class="comment" style="width:100%">
+		<div class="comment">
 		{{ data.comment | markdown_to_html }}
 		</div>
 	</div>
