--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1046,8 +1046,12 @@ line-height: 17px;
 }
 
 .comment {
+	p {
+	width:100%;
+	margin:0;
+	}
 	img {
-	width: 100%;
+		width: 100%;
 	}
 }
 /// Gradients \\\
