redesign profiles finally
mix vlare's profiles with 2006-2009 youtube's profiles, you get this piece of shit.

--- a/assets/scss/_cards.scss
+++ b/assets/scss/_cards.scss
@@ -24,6 +24,11 @@
 .card-body-fat {
   padding: 1em;
 }
+
+.card-profiles {
+  padding: 0.35em 1em 0;
+}
+
 .card h3 em {
   padding: 0.25em;
   background-color: #eddbff;
