--- a/assets/scss/_grid-breakpoints.scss
+++ b/assets/scss/_grid-breakpoints.scss
@@ -1,6 +1,14 @@
 @use 'sass:math';
 @use 'sass:meta';
 
+.screwPaddingRight {
+	padding-right: 0px !important;
+}
+
+.screwPaddingLeft {
+	padding-left: 0px !important;
+}
+
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
