--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1051,6 +1051,11 @@ line-height: 17px;
 		width: 100%;
 	}
 }
+
+#myModal {
+     display: none;
+}
+
 /// Gradients \\\
 @import "_gradients";
 /// Backgrounds \\\
