--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -11,9 +11,10 @@
 	<link rel="shortcut icon" href="/assets/icons/favicon.ico">
 	<meta name="apple-mobile-web-app-title" content="cheeseRox">
 	<meta name="application-name" content="cheeseRox">
-	<meta name="msapplication-TileColor" content="#2b5797">
 	<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
-	<meta name="theme-color" content="#4723d9">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa81d">
+	<meta name="msapplication-TileColor" content="#ffa81d">
+	<meta name="theme-color" content="#ffa81d">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 	{% if theme == 'dark' %}
 		<link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
@@ -29,6 +30,15 @@
 		unsubscribe_string = '{{ __("Unfollow") }}';
 	</script>
 	<style>
+	{% if pfpRoundness == 'square' %}
+		.rounded {
+			border-radius: 0;
+		}
+	{% elseif pfpRoundness == 'rounded' %}
+		.rounded {
+			border-radius: 10%;
+		}
+	{% endif %}
 	{% block customcss %}{% endblock %}
 	</style>
 </head>
@@ -149,6 +159,10 @@
 			| <b>{{ __("Images uploaded") }}</b>: {{ stats.imagecount }}
 			</p>
 			<h5><a href="githistory.php">{{ __("Git Commit") }} {{ git_commit() }}</a><br></h5>
+			<a class="button button-neutral button-small btnAdd" role="button">Options</a>
+			<div id="myModal" class="bg-light" style="padding:0.3em;">
+
+			</div>
 		</div>
 	</footer>
 {% block custom_footer %}
