--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -57,6 +57,10 @@
 	{% endblock %}
 
 	{% block content %}
+	{% if updated %}
+<div class="header_message">{{ __("Settings successfully saved!") }}</div>
+<br>
+{% endif %}
 <div class="grid">
 	<div class="col-md-8">
 	<div class="grid">
