--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -61,14 +61,11 @@
 	<footer>
 		<div class="footer">
 	{% endif %}
-			<img src="assets/logo-wordmark.png">
+			<img src="/assets/logo-wordmark.png">
 			<p><b>{{ __("By the cheeseRox contributors") }}</b> · 2020-{{ 'now' | date('Y') }} 
-			| <b>{{ __("Users registered") }}</b>: {{ stats.usercount }} 
-			| <b>{{ __("Videos uploaded") }}</b>: {{ stats.videocount }}
-			| <b>{{ __("Music uploaded") }}</b>: {{ stats.musiccount }}
-			| <b>{{ __("Images uploaded") }}</b>: {{ stats.imagecount }}
+			| <b><a href="/statistics.php">{{ __("Statistics") }}</a></b>
 			</p>
-			<h5><a href="githistory.php">{{ __("Git Commit") }} {{ git_commit() }}</a><br></h5>
+			<h5><a href="/githistory.php">{{ __("Git Commit") }} {{ git_commit() }}</a><br></h5>
 			<a class="button button-neutral button-small btnAdd" role="button">Options</a>
 			<div id="myModal" class="bg-light" style="padding:0.3em;">
 
