--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -58,9 +58,9 @@
 
 	{% block content %}
 	{% if updated %}
-<div class="header_message">{{ __("Settings successfully saved!") }}</div>
-<br>
-{% endif %}
+		<div class="header_message header-success">{{ __("Settings successfully saved!") }}</div>
+		<br>
+	{% endif %}
 <div class="grid">
 	<div class="col-md-8">
 	<div class="grid">
