--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -12,45 +12,27 @@
 <script>
 	user_id = '{{ userpagedata.id }}';
 </script>
+<link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
-{% block content %}
-<style>
+{% block customcss %}
 	.channel-header-bg {
-	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
-	background-position: center !important;
-	height: 225px;
+		background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444) !important;
+		background-position: center !important;
+		height: 225px;
 	}
 	body {
-	background-color: {{ customProfile.background }};
+		background-color: {{ customProfile.background }};
 	}
-</style>
+	.user-action {
+		color: {{ customProfile.fontcolor }}
+	}
+{% endblock %}
+{% block content %}
 {% if markread %}
-<div class="header_message">{{ __("Marked all notifications as read.") }}</div>
+<div class="header_message header-success>{{ __("Marked all notifications as read.") }}</div>
 {% elseif edited %}
-<div class="header_message">{{ __("Settings successfully saved!") }}</div>
+<div class="header_message header-success">{{ __("Settings successfully saved!") }}</div>
 {% endif %}
-<div class="bg-dark" style="padding:1px 15px;">
-{% if userpagedata.id == userdata.id and not forceuser %}
-<p>		   <a href="/settings.php" style="color:white;">{{ __("Edit my settings") }}</a>
-	&bull; <a href="/forum/private.php" style="color:white;">{{ __("View my private messages") }}</a>
-	&bull; <a href="/user.php?id={{ id }}&forceuser" style="color:white;">{{ __("View user page as viewer") }}</a>
-</p>
-{% else %}
-<p>
-	<a href="forum/forum.php?user={{ id }}" style="color:white;">{{ __("View threads") }}</a>
-	&bull; <a href="forum/thread.php?user={{ id }}" style="color:white;">{{ __("Show posts") }}</a>
-	{% if log %}
-	{% if userdata.id != id %}
-	&bull; <a href="forum/sendprivate.php?uid={{ id }}" style="color:white;">{{ __("Send private message") }}</a>
-	{% endif %}
-	{% if userdata.powerlevel > 2 %}
-	&bull; <a href="resetpassword.php?grf={{ id }}" style="color:white;">{{ __("Generate password reset for user") }}</a>
-	&bull; <a href="forum/editperms.php?uid={{ id }}" style="color:white;">{{ __("Edit forum permissions") }}</a>
-	{% endif %}
-	{% endif %}
-</p>
-{% endif %}
-</div>
 <div class="channel-header-bg">
 </div>
 <div class="grid" style="background-color:{{ customProfile.highlightheader }};height: 100px;">
@@ -61,7 +43,14 @@
 	</div>
 	<div class="col-md-10" style="color:{{ customProfile.titlefont }};height:inherit;">
 		<h1>{{ userpagedata.title }}</h1>
-		<p>{{ subCount }} followers • {{ views }} video views</p>
+		{# hack to prevent twig from outputing the number 1 #}
+		{% if subCount != 1 %}
+			{% set pluralSubscribers = __("s") %}
+		{% endif %}
+		{% if views != 1 %}
+			{% set pluralViews = __("s") %}
+		{% endif %}
+		<p>{{ __("%s follower%s", [subCount ?? __("no"), pluralSubscribers]) }}  • {{ __("%s view%s", [views ?? __("no"), pluralViews]) }}</p>
 	</div>
 	<div class="col-md-1" style="height:inherit;display: table;">
 		<div style="display: table-cell;vertical-align: middle;text-align:center;">
@@ -74,7 +63,7 @@
 	</div>
 </div>
 <div class="grid" style="background-color:{{ customProfile.highlightinside }};border: 1px solid {{ customProfile.highlightheader }}">
-	<div class="screwPaddingLeft col-md-3">
+	<div class="screwPaddingLeft col-md-3" style="color:{{ customProfile.fontcolor }};">
 			<div class="card-profiles">
 				<h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
 				About {{ userpagedata.name }}
@@ -97,22 +86,105 @@
 					</table>
 					</div>
 				</div>
+				<div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
+				{% if userpagedata.id == userdata.id and not forceuser %}
+					<div class="user-action-container">
+						<a href="settings.php">
+							<div class="user-action">{{ icon("gear", 24) }} {{ __("Edit my settings") }}</div>
+						</a>
+					</div>
+					<div class="user-action-container">
+						<a href="/forum/private.php">
+							<div class="user-action">{{ icon("envelope", 24) }} {{ __("View my messages") }}</div>
+						</a>
+					</div>
+					<div class="user-action-container">
+						<a href="/user.php?id={{ id }}&forceuser">
+							<div class="user-action">{{ icon("person", 24) }} {{ __("View as viewer") }}</div>
+						</a>
+					</div>
+				{% else %}
+				{% if log %}
+					<div class="user-action-container">
+						<a href="forum/sendprivate.php?uid={{ id }}">
+							<div class="user-action">{{ icon("envelope", 24) }} {{ __("Send message") }}</div>
+						</a>
+					</div>
+					{% if userdata.powerlevel > 2 %}
+					<div class="user-action-container">
+						<a href="resetpassword.php?grf={{ id }}">
+							<div class="user-action">{{ icon("key", 24) }} {{ __("Generate password reset") }}</div>
+						</a>
+					</div>
+					<div class="user-action-container">
+						<a href="forum/editperms.php?uid={{ id }}">
+							<div class="user-action">{{ icon("question-circle", 24) }} {{ __("Edit forum permissions") }}</div>
+						</a>
+					</div>
+					{% endif %}
+				{% endif %}
+				{% endif %}
+				</div>
 		</div>
 		
 	</div>
-	<div class="screwPaddingRight col-md-9" style="color:{{ customProfile.titlefont }};">
+	<div class="screwPaddingRight col-md-9" style="color:{{ customProfile.fontcolor }};">
 			<div class="card-profiles">
 				<h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
-				Videos
-				</h2>
+				{{ __("Featured") }}
+				</h3>
+				<div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
+					<div class="card-body">
+						<div class="col-md-6">
+						{{ include('/components/player.twig') }}
+						</div>
+						<div class="col-md-6">
+						<h2><a href="watch.php?v={{ video.video_id }}">{{ video.title }}</a></h2>
+						<p style="margin:0;">From: <a href="/user.php?name={{ video.u_name }}" title="{{ video.u_name }}">{{ video.u_name }}</a></p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+			</div>
+			<div class="card-profiles">
+				<h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
+				{{ __("Videos") }}
+				</h3>
 				<div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
 					<div class="card-body">
 					{% for latestVideo in latestVideos %}
-					{{ small_video_box(latestVideo) }}
+					{{ vertical_video_box(latestVideo) }}
 					{% else %}
 					<p>{{ __("There are currently no videos uploaded by %s.", [userpagedata.title]) }}</p>
 					{% endfor %}
 					</div>
+				</div>
+			</div>
+			<div class="card-profiles">
+				<h3 style="text-align:center;color:{{ customProfile.titlefont }};background-color:{{customProfile.regularheader }};margin:0;padding:5px;">
+				{{ __("Comments") }}
+				</h3>
+				<div class="card" style="border-color: {{customProfile.regularheader }};background-color:{{customProfile.regularinside }};">
+			   {% if log %}
+               <div class="grid">
+                  <div class="col-md-1">
+                     <img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}">
+                  </div>
+                  <div class="col-md-11">
+                     <div>
+                        <textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3"
+                        placeholder="{{ __("Enter comment here.") }}"></textarea>
+                     </div>
+                     <div class="right">
+                        <button id="post-user" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
+                     </div>
+                  </div>
+               </div>
+			   {% endif %}
+			   <div id="comment"></div>
+				   {% for comment in comments %}
+				   {{ comment(comment) }}
+				   {% endfor %}
 				</div>
 			</div>
 		</div>
