[CodeFactor] Apply fixes to commit e62e769

--- a/assets/scss/nostalgia.scss
+++ b/assets/scss/nostalgia.scss
@@ -9,7 +9,7 @@ body {
 }
 
 #masthead-container {
-	margin: 8px auto 5px auto;
+	margin: 8px auto 5px;
 	padding: 0;
 	position: relative;
 	display: block;
@@ -34,7 +34,7 @@ body {
 			font-size: 13px;
 			white-space: nowrap;
 			display: block;
-			padding: 9px 7px 10px 7px;
+			padding: 9px 7px 10px;
 			border-left: 1px solid #fff;
 			border-right: 1px solid #999;
 		}
