--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -22,6 +22,9 @@
 	{% if theme == 'bluey' %}
 		<link id="bluey" rel="stylesheet" href="/assets/css/bluey.css" type="text/css">
 	{% endif %}
+	{% if theme == 'nostalgia' %}
+		<link id="nostalgia" rel="stylesheet" href="/assets/css/nostalgia.css" type="text/css">
+	{% endif %}
 	<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<script src="/assets/common.js"></script>
@@ -45,11 +48,13 @@
 <body>
 {% if theme == 'bluey' %}
 	{% include "components/katt/_header.twig" %}
+{% elseif theme == 'nostalgia' %}
+	{% include "components/nostalgia/_header.twig" %}
 {% else %}
 	{% include "components/_header.twig" %}
 {% endif %}
 	{% block precontent %}{% endblock %}
-				<div class="container" style="max-width: 1200px;padding:0;">
+				<div class="container page-container">
 					{% block content %}{% endblock %}
 					</div>
 	{% if theme == 'bluey' %}
