--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -16,7 +16,7 @@
 	{% endif %}
 <div class="indexNext">
 <div class="main-content" style="margin-top:-48px;padding: 75px 0px 25px;display: block;">
-	<div class="container" style="max-width: 1200px;">
+	<div class="container page-container">
 		{% if log %}
 		<div class="grid" style="height:inherit;display: table;">
 			<div style="display: table-cell;vertical-align: middle;width:16%;padding-right:1em;">
