--- a/templates/sbnext-finalium/modal.twig
+++ b/templates/sbnext-finalium/modal.twig
@@ -6,6 +6,7 @@
   <option value="default">Light</option>
   <option value="dark">Dark</option>
   <option value="bluey">Katt</option>
+  <option value="nostalgia">Nostalgia</option>
 </select>
 <label for="language">Language</label>
 <select class="form-select" name="language">
