--- a/templates/sbnext-finalium/settings.twig
+++ b/templates/sbnext-finalium/settings.twig
@@ -13,7 +13,21 @@
 </div>
 <div class="grid">
 <div class="col-md-2">
-List of options, yeah, do that later.
+	<div class="settings-tab current">
+		<a href="/settings.php">
+			Overview
+		</a>
+	</div>
+	<div class="settings-tab">
+		<a href="/settings.php">
+			Credentials
+		</a>
+	</div>
+	<div class="settings-tab">
+		<a href="/my_profile.php">
+			Profile setup
+		</a>
+	</div>
 </div>
 <div class="col-md-10">
 <div class="grid">
